; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_xmlstream.c_startElement.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_xmlstream.c_startElement.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ParserStruct = type { %struct.TYPE_2__, i32, i32 }
%struct.TYPE_2__ = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32**)* @startElement to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @startElement(i8* %0, i32* %1, i32** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32**, align 8
  %7 = alloca %struct.ParserStruct*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32** %2, i32*** %6, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.ParserStruct*
  store %struct.ParserStruct* %9, %struct.ParserStruct** %7, align 8
  %10 = load %struct.ParserStruct*, %struct.ParserStruct** %7, align 8
  %11 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* %11, align 4
  %14 = load %struct.ParserStruct*, %struct.ParserStruct** %7, align 8
  %15 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %16, 1
  store i32 %17, i32* %15, align 8
  %18 = load %struct.ParserStruct*, %struct.ParserStruct** %7, align 8
  %19 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = call i32 @free(i32* %21)
  %23 = load %struct.ParserStruct*, %struct.ParserStruct** %7, align 8
  %24 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 1
  store i32* null, i32** %25, align 8
  %26 = load %struct.ParserStruct*, %struct.ParserStruct** %7, align 8
  %27 = getelementptr inbounds %struct.ParserStruct, %struct.ParserStruct* %26, i32 0, i32 0
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  store i64 0, i64* %28, align 8
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
